--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,15 @@
         "lib": ["es2023"],
         "module": "Node16",
         "target": "es2022",
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "forceConsistentCasingInFileNames": true,
 
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "moduleResolution": "node16"
-    }
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "dist"]
 }
