--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +18,18 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^22.1.0",
     "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.7.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
+    "prettier": "3.3.3",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1"
   },
-  "overrides": {"eslint": "^9.6.0"}
+  "overrides": {
+    "eslint": "^9.8.0"
+  }
 }
